test/classes/errors/nilability-assign/assign-nonnil-unmanaged-from-oknil-nil.chpl
//  lhs: unmanaged!  rhs: nil?  error: nlb

class MyClass {  var x: int;  }

var lhs = new unmanaged MyClass();


lhs = nil;

compilerError("done");
delete lhs;

